--- a/integrantes.html
+++ b/integrantes.html
@@ -169,36 +169,46 @@
     <h1>Conheça os Integrantes do Projeto de Estágio</h1>
     <p>Os integrantes do nosso projeto trazem diferentes habilidades e experiências, trabalhando juntos para transformar dados em promoções mais relevantes e personalizadas para os consumidores da Ambev.</p>
 
-    <div class="section">
-      <h2>Equipe de Desenvolvimento</h2>
-      <div class="team-member">
-        <div class="member-photo">
-          <img src="integrante1.jpg" alt="Integrante 1">
-        </div>
-        <div class="member-info">
-          <h3>José Fonseca</h3>
-           <p>Estágiario de APR (CDD Niterói)</p>
-        </div>
-      </div>
-      <div class="team-member">
-        <div class="member-photo">
-          <img src="integrante2.jpg" alt="Integrante 2">
-        </div>
-        <div class="member-info">
-          <h3>Isabela Lacerda</h3>
-           <p>Estágiaria de MKT GEO RJES</p>
-        </div>
-      </div>
-      <div class="team-member">
-        <div class="member-photo">
-          <img src="integrante3.jpg" alt="Integrante 3">
-        </div>
-        <div class="member-info">
-          <h3>Esther Pisno</h3>
-           <p>Estágiaria de Logistica GEO RJES</p>
-        </div>
-      </div>
+   <!-- Apenas trecho atualizado da seção da equipe (restante da estrutura permanece a mesma) -->
+<div class="section">
+  <h2>Equipe de Desenvolvimento</h2>
+
+  <div class="team-member">
+    <div class="member-photo">
+      <img src="integrante1.jpg" alt="Integrante 1">
     </div>
+    <div class="member-info">
+      <h3>José Fonseca</h3>
+      <p>Estagiário de APR (CDD Niterói)</p>
+      <p><strong>Email:</strong> <a href="mailto:jose.fonseca@ambev.com.br">jose.fonseca@ambev.com.br</a></p>
+      <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/josefonseca" target="_blank">linkedin.com/in/josefonseca</a></p>
+    </div>
+  </div>
+
+  <div class="team-member">
+    <div class="member-photo">
+      <img src="integrante2.jpg" alt="Integrante 2">
+    </div>
+    <div class="member-info">
+      <h3>Isabela Lacerda</h3>
+      <p>Estagiária de MKT GEO RJES</p>
+      <p><strong>Email:</strong> <a href="mailto:isabela.lacerda@ambev.com.br">isabela.lacerda@ambev.com.br</a></p>
+      <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/isabelalacerda" target="_blank">linkedin.com/in/isabelalacerda</a></p>
+    </div>
+  </div>
+
+  <div class="team-member">
+    <div class="member-photo">
+      <img src="integrante3.jpg" alt="Integrante 3">
+    </div>
+    <div class="member-info">
+      <h3>Esther Pisno</h3>
+      <p>Estagiária de Logística GEO RJES</p>
+      <p><strong>Email:</strong> <a href="mailto:esther.pisno@ambev.com.br">esther.pisno@ambev.com.br</a></p>
+      <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/estherpisno" target="_blank">linkedin.com/in/estherpisno</a></p>
+    </div>
+  </div>
+</div>
 
     <div class="action-buttons">
       <button onclick="window.location.href='pesquisa.html'">Refazer a Pesquisa</button>
