--- a/integrantes.html
+++ b/integrantes.html
@@ -211,7 +211,7 @@
 </div>
 
     <div class="action-buttons">
-      <button onclick="window.location.href='pesquisa.html'">Refazer a Pesquisa</button>
+      <button onclick="window.location.href='index.html'">Refazer a Pesquisa</button>
       <button onclick="window.location.href='Inicial.html'">Voltar à Página Inicial</button>
     </div>
 
