--- a/integrantes.html
+++ b/integrantes.html
@@ -180,8 +180,8 @@
     <div class="member-info">
       <h3>José Fonseca</h3>
       <p>Estagiário de APR (CDD Niterói)</p>
-      <p><strong>Email:</strong> <a href="mailto:99840746@ab-inbev.com">jose.fonseca@ambev.com.br</a></p>
-      <p><strong>LinkedIn:</strong> <a href="www.linkedin.com/in/jose-eduardo-quicoli-fonseca-a51b1b196" target="_blank">linkedin.com/in/josefonseca</a></p>
+      <p><strong>Email:</strong> <a href="mailto:99840746@ab-inbev.com">99840746@ab-inbev.com</a></p>
+      <p><strong>LinkedIn:</strong> <a href="www.linkedin.com/in/jose-eduardo-quicoli-fonseca-a51b1b196" target="_blank">www.linkedin.com/in/jose-eduardo-quicoli-fonseca-a51b1b196</a></p>
     </div>
   </div>
 
