--- a/integrantes.html
+++ b/integrantes.html
@@ -169,8 +169,7 @@
     <h1>Conheça os Integrantes do Projeto de Estágio</h1>
     <p>Os integrantes do nosso projeto trazem diferentes habilidades e experiências, trabalhando juntos para transformar dados em promoções mais relevantes e personalizadas para os consumidores da Ambev.</p>
 
-   <!-- Apenas trecho atualizado da seção da equipe (restante da estrutura permanece a mesma) -->
-<div class="section">
+   <div class="section">
   <h2>Equipe de Desenvolvimento</h2>
 
   <div class="team-member">
@@ -180,8 +179,18 @@
     <div class="member-info">
       <h3>José Fonseca</h3>
       <p>Estagiário de APR (CDD Niterói)</p>
-      <p><strong>Email:</strong> <a href="mailto:99840746@ab-inbev.com">99840746@ab-inbev.com</a></p>
-      <p><strong>LinkedIn:</strong> <a href="www.linkedin.com/in/jose-eduardo-quicoli-fonseca-a51b1b196" target="_blank">www.linkedin.com/in/jose-eduardo-quicoli-fonseca-a51b1b196</a></p>
+      <p>
+        <i class="fas fa-envelope"></i>
+        <strong>Email:</strong>
+        <a href="mailto:99840746@ab-inbev.com">99840746@ab-inbev.com</a>
+      </p>
+      <p>
+        <i class="fab fa-linkedin"></i>
+        <strong>LinkedIn:</strong>
+        <a href="https://www.linkedin.com/in/jose-eduardo-quicoli-fonseca-a51b1b196" target="_blank">
+          linkedin.com/in/jose-eduardo-quicoli-fonseca-a51b1b196
+        </a>
+      </p>
     </div>
   </div>
 
@@ -192,8 +201,18 @@
     <div class="member-info">
       <h3>Isabela Lacerda</h3>
       <p>Estagiária de MKT GEO RJES</p>
-      <p><strong>Email:</strong> <a href="mailto:isabela.lacerda@ambev.com.br">isabela.lacerda@ambev.com.br</a></p>
-      <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/isabelalacerda" target="_blank">linkedin.com/in/isabelalacerda</a></p>
+      <p>
+        <i class="fas fa-envelope"></i>
+        <strong>Email:</strong>
+        <a href="mailto:isabela.lacerda@ambev.com.br">isabela.lacerda@ambev.com.br</a>
+      </p>
+      <p>
+        <i class="fab fa-linkedin"></i>
+        <strong>LinkedIn:</strong>
+        <a href="https://www.linkedin.com/in/isabelalacerda" target="_blank">
+          linkedin.com/in/isabelalacerda
+        </a>
+      </p>
     </div>
   </div>
 
@@ -204,8 +223,18 @@
     <div class="member-info">
       <h3>Esther Pisno</h3>
       <p>Estagiária de Logística GEO RJES</p>
-      <p><strong>Email:</strong> <a href="mailto:esther.pisno@ambev.com.br">esther.pisno@ambev.com.br</a></p>
-      <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/estherpisno" target="_blank">linkedin.com/in/estherpisno</a></p>
+      <p>
+        <i class="fas fa-envelope"></i>
+        <strong>Email:</strong>
+        <a href="mailto:esther.pisno@ambev.com.br">esther.pisno@ambev.com.br</a>
+      </p>
+      <p>
+        <i class="fab fa-linkedin"></i>
+        <strong>LinkedIn:</strong>
+        <a href="https://www.linkedin.com/in/estherpisno" target="_blank">
+          linkedin.com/in/estherpisno
+        </a>
+      </p>
     </div>
   </div>
 </div>
