--- a/integrantes.html
+++ b/integrantes.html
@@ -226,12 +226,12 @@
       <p>
         <i class="fas fa-envelope"></i>
         <strong>Email:</strong>
-        <a href="mailto:esther.pisno@ambev.com.br">esther.pisno@ambev.com.br</a>
+        <a href="mailto:99845193@ab-inbev.com">99845193@ab-inbev.com</a>
       </p>
       <p>
         <i class="fab fa-linkedin"></i>
         <strong>LinkedIn:</strong>
-        <a href="https://www.linkedin.com/in/estherpisno" target="_blank">
+        <a href="https://www.linkedin.com/in/esther-pisno-518826222?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app " target="_blank">
           linkedin.com/in/estherpisno
         </a>
       </p>
