--- a/integrantes.html
+++ b/integrantes.html
@@ -188,7 +188,7 @@
         <i class="fab fa-linkedin"></i>
         <strong>LinkedIn:</strong>
         <a href="https://www.linkedin.com/in/jose-eduardo-quicoli-fonseca-a51b1b196" target="_blank">
-          linkedin.com/in/jose-eduardo-quicoli-fonseca-a51b1b196
+          linkedin.com/in/josefonseca
         </a>
       </p>
     </div>
