--- a/integrantes.html
+++ b/integrantes.html
@@ -169,7 +169,8 @@
     <h1>Conheça os Integrantes do Projeto de Estágio</h1>
     <p>Os integrantes do nosso projeto trazem diferentes habilidades e experiências, trabalhando juntos para transformar dados em promoções mais relevantes e personalizadas para os consumidores da Ambev.</p>
 
-   <div class="section">
+   <!-- Apenas trecho atualizado da seção da equipe (restante da estrutura permanece a mesma) -->
+<div class="section">
   <h2>Equipe de Desenvolvimento</h2>
 
   <div class="team-member">
@@ -179,18 +180,8 @@
     <div class="member-info">
       <h3>José Fonseca</h3>
       <p>Estagiário de APR (CDD Niterói)</p>
-      <p>
-        <i class="fas fa-envelope"></i>
-        <strong>Email:</strong>
-        <a href="mailto:99840746@ab-inbev.com">99840746@ab-inbev.com</a>
-      </p>
-      <p>
-        <i class="fab fa-linkedin"></i>
-        <strong>LinkedIn:</strong>
-        <a href="https://www.linkedin.com/in/jose-eduardo-quicoli-fonseca-a51b1b196" target="_blank">
-          linkedin.com/in/josefonseca
-        </a>
-      </p>
+      <p><strong>Email:</strong> <a href="mailto:99840746@ab-inbev.com">jose.fonseca@ambev.com.br</a></p>
+      <p><strong>LinkedIn:</strong> <a href="www.linkedin.com/in/jose-eduardo-quicoli-fonseca-a51b1b196" target="_blank">linkedin.com/in/josefonseca</a></p>
     </div>
   </div>
 
@@ -201,18 +192,8 @@
     <div class="member-info">
       <h3>Isabela Lacerda</h3>
       <p>Estagiária de MKT GEO RJES</p>
-      <p>
-        <i class="fas fa-envelope"></i>
-        <strong>Email:</strong>
-        <a href="mailto:isabela.lacerda@ambev.com.br">isabela.lacerda@ambev.com.br</a>
-      </p>
-      <p>
-        <i class="fab fa-linkedin"></i>
-        <strong>LinkedIn:</strong>
-        <a href="https://www.linkedin.com/in/isabelalacerda" target="_blank">
-          linkedin.com/in/isabelalacerda
-        </a>
-      </p>
+      <p><strong>Email:</strong> <a href="mailto:isabela.lacerda@ambev.com.br">isabela.lacerda@ambev.com.br</a></p>
+      <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/isabelalacerda" target="_blank">linkedin.com/in/isabelalacerda</a></p>
     </div>
   </div>
 
@@ -223,18 +204,8 @@
     <div class="member-info">
       <h3>Esther Pisno</h3>
       <p>Estagiária de Logística GEO RJES</p>
-      <p>
-        <i class="fas fa-envelope"></i>
-        <strong>Email:</strong>
-        <a href="mailto:99845193@ab-inbev.com">99845193@ab-inbev.com</a>
-      </p>
-      <p>
-        <i class="fab fa-linkedin"></i>
-        <strong>LinkedIn:</strong>
-        <a href="https://www.linkedin.com/in/esther-pisno-518826222?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app " target="_blank">
-          linkedin.com/in/estherpisno
-        </a>
-      </p>
+      <p><strong>Email:</strong> <a href="mailto:esther.pisno@ambev.com.br">esther.pisno@ambev.com.br</a></p>
+      <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/estherpisno" target="_blank">linkedin.com/in/estherpisno</a></p>
     </div>
   </div>
 </div>
