--- a/escolha_cerveja.html
+++ b/escolha_cerveja.html
@@ -124,7 +124,7 @@ main {
   <div class="footer-spacer"></div>
 
   <footer>
-    <a href="Inicial.html" class="footer-link">
+    <a href="index.html" class="footer-link">
       <i class="fas fa-home" aria-hidden="true"></i>
       <span>Home</span>
     </a>
