--- a/painel.html
+++ b/painel.html
@@ -38,7 +38,7 @@
     <p class="dashboard-subtitle">Análise de resultados da pesquisa "Descubra Sua Cerveja Ideal"</p>
   </div>
   <div class="header-controls">
-    <a href="Inicial.html" class="btn btn-outline" style="margin-right: 1rem;">
+    <a href="index.html" class="btn btn-outline" style="margin-right: 1rem;">
       <i class="fas fa-arrow-left"></i> Voltar ao Início
     </a>
     <button id="export-csv" class="btn btn-outline">
