--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       <div class="option-cards">
         <div class="option-card">
           <a href="Inicial.html">Responder Pesquisa Novamente</a>
-          <h3>Responder Pesquisa Novamente</h3>
+          <h3>Responder Pesquisa</h3>
           <p>Descubra Sua Cerveja Ideal em menos de 1 minuto.</p>
         </div>
         <div class="option-card">
