--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
 
   <!-- Rodapé -->
   <footer>
-    <a href="Inicial.html" class="footer-link active">
+    <a href="index.html" class="footer-link active">
       <i class="fas fa-home" aria-hidden="true"></i>
       <span>Home</span>
     </a>
