--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
     <nav>
       <div class="option-cards">
         <div class="option-card">
-          <a href="index.html">Responder Pesquisa Novamente</a>
+          <a href="Inicial.html">Responder Pesquisa Novamente</a>
           <h3>Responder Pesquisa Novamente</h3>
           <p>Descubra Sua Cerveja Ideal em menos de 1 minuto.</p>
         </div>
