--- a/Inicial.html
+++ b/Inicial.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,16 +10,13 @@
 <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-analytics-compat.js"></script>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
 </head>
-
 <body>
-  <div class="container" style="display: none;">
+  <div class="container">
     <div id="header">
       <h1>Descubra Sua Cerveja Ideal</h1>
       <p>Responda algumas perguntas simples e descubra quais cervejas combinam com o seu perfil. Encontre as melhores promoções personalizadas!</p>
     </div>
-
     <div class="progress-container">
       <div class="progress-label">
         <span id="progress-text">Questão 1 de 6</span>
@@ -30,7 +26,6 @@
         <div class="progress-fill" style="width:0%"></div>
       </div>
     </div>
-
     <div id="question-container"></div>
     
     <!-- Campos ocultos para respostas -->
@@ -43,9 +38,6 @@
       <input type="hidden" id="pergunta6" name="pergunta6">
     </div>
   </div>
-
-
   <script src="script.js" defer></script>
 </body>
-
 </html>
