--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
     <nav>
       <div class="option-cards">
         <div class="option-card">
-          <a href="Inicial.html">Responder Pesquisa Novamente</a>
+          <a href="index.html">Responder Pesquisa Novamente</a>
           <h3>Responder Pesquisa Novamente</h3>
           <p>Descubra Sua Cerveja Ideal em menos de 1 minuto.</p>
         </div>
@@ -460,7 +460,7 @@
 
   <!-- Rodapé -->
   <footer>
-    <a href="index.html" class="footer-link active">
+    <a href="Inicial.html" class="footer-link active">
       <i class="fas fa-home" aria-hidden="true"></i>
       <span>Home</span>
     </a>
