--- a/promocoes.html
+++ b/promocoes.html
@@ -21,7 +21,7 @@
         <!-- Header com navegação -->
         <header class="app-header">
             <div class="header-content">
-                <a href="Inicial.html" class="back-btn" aria-label="Voltar para página inicial">
+                <a href="index.html" class="back-btn" aria-label="Voltar para página inicial">
                     <i class="fas fa-arrow-left"></i>
                 </a>
                 <h1>Promoções</h1>
