--- a/index.html
+++ b/index.html
@@ -400,30 +400,29 @@
     <nav>
       <div class="option-cards">
         <div class="option-card">
-          <a href="Inicial.html">Responder Pesquisa Novamente</a>
-          <h3>Responder Pesquisa Novamente</h3>
+          <a href="index.html">Descobrir Minha Cerveja</a>
+          <h3>Responder Pesquisa</h3>
           <p>Descubra Sua Cerveja Ideal em menos de 1 minuto.</p>
         </div>
         <div class="option-card">
-          <a href="login.html">Resultados</a>
-          <h3>Resultados</h3>
-          <p>Explore nosso Projeto por meio de um dashboard interativo!!</p>
+          <a href="promocoes.html">Resultados</a>
+          <h3>Todas as Promoções</h3>
+          <p>Acesse todas as promoçoes ativas no seu municipio</p>
         </div>
         <div class="option-card">
-          <a href="integrantes.html">Conheça os Integrantes</a>
-          <h3>Conheça os Integrantes</h3>
-          <p>Venha conhecer esse time de estags</p>
+          <a href="mercados.html">Conheça os Integrantes</a>
+          <h3>Mercados Parceiros</h3>
+          <p>Venha conhecer os mercados que estão com promoçoes ativas</p>
         </div>
       </div>
 
       <div class="button-row">
-        <a href="promocoes.html" class="main-btn">
+        <a href="login.html" class="main-btn">
           <i class="fas fa-percent" aria-hidden="true"></i>
-          Todas as Promoções
+          Resultados
         </a>
-        <a href="mercados.html" class="main-btn">
-          <i class="fas fa-store" aria-hidden="true"></i>
-          Mercados Parceiros
+        <a href="integrantes.html" class="main-btn">
+          Conheça os Integrantes
         </a>
       </div>
     </nav>
