--- a/escolha_cerveja.html
+++ b/escolha_cerveja.html
@@ -171,7 +171,7 @@
   <div class="footer-spacer"></div>
 
   <footer>
-    <a href="Inicial.html" class="footer-link">
+    <a href="index.html" class="footer-link">
       <i class="fas fa-home"></i>
       <span>Home</span>
     </a>
