--- a/promocoes.html
+++ b/promocoes.html
@@ -395,7 +395,7 @@
 
         <!-- Rodapé -->
         <footer class="app-footer">
-            <a href="Inicial.html" class="footer-link">
+            <a href="index.html" class="footer-link">
                 <i class="fas fa-home"></i>
                 <span>Home</span>
             </a>
