--- a/integrantes.html
+++ b/integrantes.html
@@ -211,8 +211,7 @@
 </div>
 
     <div class="action-buttons">
-      <button onclick="window.location.href='index.html'">Refazer a Pesquisa</button>
-      <button onclick="window.location.href='Inicial.html'">Voltar à Página Inicial</button>
+      <button onclick="window.location.href='index.html'">Voltar à Página Inicial</button>
     </div>
 
     <div class="footer">
