--- a/painel.html
+++ b/painel.html
@@ -237,7 +237,13 @@
   <script>
     // Inicialização do Firebase (adicione suas configurações)
     const firebaseConfig = {
-      // Suas configurações do Firebase aqui
+      apiKey: "AIzaSyDvMFh5CNWeCXqBo98GJvj-YGACSlmB81c",
+      authDomain: "pesquisa-8a0f9.firebaseapp.com",
+      projectId: "pesquisa-8a0f9",
+      storageBucket: "pesquisa-8a0f9.firebasestorage.app",
+      messagingSenderId: "453188166697",
+      appId: "1:453188166697:web:c1144b2abeb1edc3b16838",
+      measurementId: "G-H34QHPSPS1"
     };
     
     // Inicializar Firebase
