--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
       
 
       <div class="button-row">
-        <a href="Integrantes.html" class="main-btn">
+        <a href="integrantes.html" class="main-btn">
           <i class="fas fa-award"></i>
           Conheça os Integrantes
         </a>
