--- a/Inicial.html
+++ b/Inicial.html
@@ -13,6 +13,9 @@
 </head>
 <body>
   <div class="container">
+  <div id="header">
+      <h1>Descubra Sua Cerveja Ideal</h1>
+    </div>
     <div class="progress-container">
       <div class="progress-label">
         <span id="progress-text">Questão 1 de 6</span>
