--- a/promonovaiguacu.html
+++ b/promonovaiguacu.html
@@ -2,75 +2,312 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Promoções Ambev | Nova Iguaçu</title>
+
+  <!-- Fonte Inter -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="promocoes.css" />
+  
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+    body {
+      font-family: 'Inter', sans-serif;
+      margin: 0;
+      background: #fff;
+      color: #222;
+      padding: 10px;
+    }
+    h1, h2, h3 {
+      margin: 0 0 12px 0;
+    }
+    .container {
+      max-width: 960px;
+      margin: 0 auto;
+    }
+    .header {
+      text-align: center;
+      padding: 10px 0;
+      border-bottom: 2px solid #0052cc;
+      margin-bottom: 20px;
+      font-weight: 700;
+      font-size: 24px;
+      color: #0052cc;
+      user-select: none;
+    }
+    .promo-section {
+      margin-bottom: 40px;
+    }
+    .promo-header {
+      background-color: #0052cc;
+      color: #fff;
+      font-weight: 600;
+      padding: 10px 0;
+      text-align: center;
+      font-size: 18px;
+      border-radius: 6px 6px 0 0;
+      user-select: none;
+      margin-bottom: 10px;
+    }
+    .cards-grid {
+      display: flex;
+      gap: 15px;
+      justify-content: center;
+      flex-wrap: wrap;
+      background: #f5f5f5;
+      padding: 20px 10px;
+      border-radius: 0 0 6px 6px;
+    }
+    .card {
+      background: #fff;
+      width: 140px;
+      padding: 10px;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgb(0 0 0 / 0.1);
+      text-align: center;
+      user-select: none;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .card img {
+      max-width: 80px;
+      height: auto;
+      margin-bottom: 8px;
+    }
+    .beer-code {
+      font-weight: 700;
+      font-size: 14px;
+      margin-bottom: 6px;
+      letter-spacing: 0.03em;
+      text-transform: uppercase;
+    }
+    .price-box {
+      background: #ccc;
+      font-size: 12px;
+      font-weight: 600;
+      border-radius: 6px;
+      padding: 6px 8px;
+      width: 100%;
+      text-align: center;
+      margin-bottom: 4px;
+      line-height: 1.3;
+      color: #222;
+    }
+    .promo-text {
+      background: #ddd;
+      font-size: 12px;
+      font-weight: 600;
+      padding: 6px 8px;
+      border-radius: 6px;
+      color: #222;
+      width: 100%;
+      text-align: center;
+    }
+
+    /* Seções lado a lado */
+    .side-by-side {
+      display: flex;
+      justify-content: space-between;
+      gap: 20px;
+      flex-wrap: wrap;
+      margin-bottom: 30px;
+    }
+    .side-by-side > div {
+      flex: 1 1 45%;
+      background: #f5f5f5;
+      border-radius: 8px;
+      padding: 10px;
+    }
+    .side-by-side h3 {
+      color: #0052cc;
+      font-weight: 700;
+      margin-bottom: 10px;
+      text-align: center;
+      user-select: none;
+    }
+
+    @media (max-width: 700px) {
+      .cards-grid {
+        flex-direction: column;
+        align-items: center;
+      }
+      .side-by-side {
+        flex-direction: column;
+      }
+      .side-by-side > div {
+        flex-basis: 100%;
+      }
+      .card {
+        width: 90%;
+        max-width: 280px;
+      }
+      .card img {
+        max-width: 120px;
+      }
+    }
+  </style>
 </head>
 
 <body>
-  <div class="app-container">
-    <header class="app-header">
-      <div class="header-content">
-        <a href="promocoes.html" class="back-btn"><i class="fas fa-arrow-left"></i></a>
-        <h1>Nova Iguaçu</h1>
+  <div class="container">
+    <header class="header">
+      Promoções Ambev - Nova Iguaçu
+      <div style="margin-top: 12px; text-align: center;">
+        <button onclick="window.location.href='promocoes.html'" 
+                style="
+                  background-color: #0052cc;
+                  color: white;
+                  border: none;
+                  padding: 10px 20px;
+                  border-radius: 6px;
+                  font-weight: 700;
+                  cursor: pointer;
+                  font-family: 'Inter', sans-serif;
+                  transition: background-color 0.3s ease;
+                "
+                onmouseover="this.style.backgroundColor='#003d99'"
+                onmouseout="this.style.backgroundColor='#0052cc'">
+          Ver Tudo
+        </button>
       </div>
     </header>
+    <!-- resto do conteúdo -->
 
-    <section class="countdown-banner">
-      <div class="countdown-content">
-        <div class="countdown-text">
-          <h2>Super Ofertas em Nova Iguaçu!</h2>
-          <p>Cervejas premium com preços especiais.</p>
+
+    <!-- Primeira Quinzena -->
+    <section class="promo-section">
+      <div class="promo-header">Primeira Quinzena – 02/06 a 16/06</div>
+      
+      <div class="side-by-side">
+        <!-- Preço normal "De / Por" -->
+        <div>
+          <h3>Preço Normal</h3>
+          <div class="cards-grid">
+            <div class="card">
+              <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/90128594c8795d6436.jpg" alt="Corona" />
+              <div class="beer-code">COR LN</div>
+              <div class="price-box">
+                De: 7,19<br />
+                Por: 6,49
+              </div>
+            </div>
+
+            <div class="card">
+              <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/93d6d774428522d3.jpg" alt="Stella Artois" />
+              <div class="beer-code">STE LN</div>
+              <div class="price-box">
+                De: 5,79<br />
+                Por: 5,19
+              </div>
+            </div>
+
+            <div class="card">
+              <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/00702b35a1972219.jpg" alt="Budweiser 473ml" />
+              <div class="beer-code">BUD 473</div>
+              <div class="price-box">
+                De: 5,19<br />
+                Por: 4,99
+              </div>
+            </div>
+
+            <div class="card">
+              <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/c45c9b6f69e9e238.jpg" alt="Brahma 473ml" />
+              <div class="beer-code">BC 473</div>
+              <div class="price-box">
+                De: 4,69<br />
+                Por: 4,49
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Promoções "Leve X Pague Y" -->
+        <div>
+          <h3>Promoções Leve & Pague</h3>
+          <div class="cards-grid">
+            <div class="card">
+              <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/7f1fca74e98d13d2.jpg" alt="Antarctica Original 473ml" />
+              <div class="beer-code">ORI 473</div>
+              <div class="promo-text">Leve 12 Pague 10</div>
+            </div>
+            <div class="card">
+              <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/00702b35a1972219.jpg" alt="Budweiser Long Neck" />
+              <div class="beer-code">BUD LN</div>
+              <div class="promo-text">Leve 6 Pague 5</div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
 
-    <main class="main-content">
-      <div class="market-grid">
-        <a href="#" class="market-card">
-          <div class="market-image"><img src="brahma-zero.jpg" alt="Brahma Zero Álcool"></div>
-          <div class="market-info">
-            <h3>Brahma Zero Álcool</h3>
-            <p>10% OFF</p>
-            <div class="promo-count">Ver Promoção</div>
-          </div>
-        </a>
+    <!-- Segunda Quinzena -->
+    <section class="promo-section">
+      <div class="promo-header">Segunda Quinzena – 17/06 a 30/06</div>
+      
+      <div class="side-by-side">
+        <!-- Preço normal "De / Por" -->
+        <div>
+          <h3>Preço Normal</h3>
+          <div class="cards-grid">
+            <div class="card">
+              <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/7f1fca74e98d13d2.jpg" alt="Antarctica Original 473ml" />
+              <div class="beer-code">ORI 473</div>
+              <div class="price-box">
+                De: 5,29<br />
+                Por: 4,79
+              </div>
+            </div>
 
-        <a href="#" class="market-card">
-          <div class="market-image"><img src="budweiser-pack.jpg" alt="Budweiser Pack 12"></div>
-          <div class="market-info">
-            <h3>Budweiser Pack 12</h3>
-            <p>R$79,90</p>
-            <div class="promo-count">Ver Promoção</div>
-          </div>
-        </a>
+            <div class="card">
+              <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/0f79580119e9f765.jpg" alt="Spaten Long Neck" />
+              <div class="beer-code">SPA LN</div>
+              <div class="price-box">
+                De: 5,39<br />
+                Por: 4,99
+              </div>
+            </div>
 
-        <a href="#" class="market-card">
-          <div class="market-image"><img src="corona-longneck.jpg" alt="Corona Extra Long Neck"></div>
-          <div class="market-info">
-            <h3>Corona Extra Long Neck</h3>
-            <p>5 por R$45</p>
-            <div class="promo-count">Ver Promoção</div>
-          </div>
-        </a>
+            <div class="card">
+              <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/00702b35a1972219.jpg" alt="Budweiser Long Neck" />
+              <div class="beer-code">BUD LN</div>
+              <div class="price-box">
+                De: 5,19<br />
+                Por: 4,79
+              </div>
+            </div>
 
-        <a href="#" class="market-card">
-          <div class="market-image"><img src="stella-lata.jpg" alt="Stella Artois Lata"></div>
-          <div class="market-info">
-            <h3>Stella Artois Lata</h3>
-            <p>20% OFF</p>
-            <div class="promo-count">Ver Promoção</div>
+            <div class="card">
+              <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/7f1fca74e98d13d2.jpg" alt="Antarctica Pilsen 473ml" />
+              <div class="beer-code">AP 473</div>
+              <div class="price-box">
+                De: 4,29<br />
+                Por: 3,99
+              </div>
+            </div>
           </div>
-        </a>
+        </div>
+
+        <!-- Promoções "Leve X Pague Y" -->
+        <div>
+          <h3>Promoções Leve & Pague</h3>
+          <div class="cards-grid">
+            <div class="card">
+              <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/00702b35a1972219.jpg" alt="Budweiser Lata 473ml" />
+              <div class="beer-code">BUD 473</div>
+              <div class="promo-text">Leve 12 Pague 10</div>
+            </div>
+            <div class="card">
+              <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/c45c9b6f69e9e238.jpg" alt="Brahma Chopp 350ml" />
+              <div class="beer-code">BC 350</div>
+              <div class="promo-text">LEVE 12 GANHE 20% DE DESCONTO</div>
+            </div>
+          </div>
+        </div>
       </div>
-    </main>
+    </section>
 
-    <footer class="app-footer">
-      <a href="Inicial.html" class="footer-link"><i class="fas fa-home"></i><span>Home</span></a>
-      <a href="escolha_cerveja.html" class="footer-link"><i class="fas fa-beer"></i><span>Cervejas</span></a>
-      <a href="promocoes.html" class="footer-link active"><i class="fas fa-percent"></i><span>Promoções</span></a>
-    </footer>
   </div>
 </body>
 </html>
