--- a/promooutros.html
+++ b/promooutros.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Promoções Ambev | São Gonçalo</title>
+  <title>Promoções Ambev | RJ/ES</title>
 
   <!-- Fonte Inter -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
@@ -153,7 +153,7 @@
 <body>
   <div class="container">
     <header class="header">
-      Promoções Ambev - São Gonçalo
+      Promoções Ambev - RJ/ES
       <div style="margin-top: 12px; text-align: center;">
         <button onclick="window.location.href='promocoes.html'" 
                 style="
